# blazar-dashboard

./: .gitignore  .gitreview  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  Jenkinsfile  README.rst  babel-djangojs.cfg  lower-constraints.txt  manage.py  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
.github/workflows/: ci.yaml
blazar_dashboard/: conf.py  version.py
blazar_dashboard/api/: client.py
blazar_dashboard/content/hosts/: forms.py  panel.py  tables.py  tabs.py  tests.py  urls.py  views.py  workflows.py
blazar_dashboard/content/hosts/templates/hosts/: _detail_overview.html  _update.html  create.html  detail.html  index.html  update.html
blazar_dashboard/content/leases/: forms.py  panel.py  tables.py  tabs.py  tests.py  urls.py  utils.py  views.py  widgets.py  workflows.py
blazar_dashboard/content/leases/templates/leases/: _create.html  _create_lease_general_step.html  _custom_lease_form.html  _detail_overview.html  _scripts.html  _update.html  _widget_capabilities.html  _widget_computehost_capabilities.html  _widget_device_capabilities.html  _widget_network_capabilities.html  _widget_timespan.html  base.html  calendar.html  create.html  detail.html  device_calendar.html  index.html  network_calendar.html  update.html
blazar_dashboard/enabled/: _90_admin_reservation_panelgroup.py  _90_project_reservations_panelgroup.py  _91_admin_reservation_hosts_panel.py  _91_project_reservations_leases_panel.py
blazar_dashboard/static/leases/js/: create_lease_general_step.js  device_gantt.js  extra_capability_widget.js  lease_chart.js  lease_gantt.js  network_gantt.js
blazar_dashboard/static/leases/js/calendar/: device_gantt.js  lease_chart.js  lease_gantt.js
blazar_dashboard/static/leases/scss/: calendar.scss  detail_overview.scss  widgets.scss
blazar_dashboard/test/: helpers.py  settings.py
blazar_dashboard/test/test_data/: blazar_data.py  exceptions.py  utils.py
doc/: Makefile  requirements.txt
doc/source/: calendar.rst  conf.py  index.rst  install.rst
doc/source/install/: index.rst  install.rst
releasenotes/notes/: add-affinity-support-de4c63de74da29ff.yaml  dashboard-support-1b429d36f395d93a.yaml  display-error-details-cfd47a4e0a03bc5c.yaml  host-calendar-2ecf4058929b269e.yaml  remove-use-of-eval-ef359dec791c97cd.yaml  support-ssl-verification-when-creating-the-blazar-client-603ee30a4356ab52.yaml
releasenotes/source/: conf.py  index.rst  unreleased.rst  zed.rst
tools/: tox_install.sh
(+9 files in other folders)
